pointer Grimoire sur Bonne-pratiques et changer son poids à 10

--- a/config/_default/menus/menus.en.toml
+++ b/config/_default/menus/menus.en.toml
@@ -8,7 +8,8 @@
 [[main]]
   name = "Grimoire"
   identifier = "Docs"
-  url = "/docs/guides/example-guide/"
+  #url = "/docs/guides/example-guide/"
+  url = "/docs/guides/bonnes-pratiques/"
   weight = 10
 
 [[main]]
