--- a/config/production/hugo.toml
+++ b/config/production/hugo.toml
@@ -1,3 +1,3 @@
 # Overrides for production environment
-#baseurl = "/"
-baseurl = "https://sangview.github.io/rootcertify"
+baseurl = "/"
+#baseurl = "https://sangview.github.io/rootcertify"
