--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -28,7 +28,8 @@ mainSections = ["docs"]
   flexSearch = true # true (default) or false
   searchExclKinds = [] # list of page kinds to exclude from search indexing (e.g. ["home", "taxonomy", "term"] )
   searchExclTypes = [] # list of content types to exclude from search indexing (e.g. ["blog", "docs", "legal", "contributors", "categories"])
-  showSearch = [] # [] (all pages, default) or homepage (optionally) and list of sections (e.g. ["homepage", "blog", "guides"])
+  ## showSearch = [] # [] (all pages, default) or homepage (optionally) and list of sections (e.g. ["homepage", "blog", "guides"])
+  showSearch = ["categories"] # [] (all pages, default) or homepage (optionally) and list of sections (e.g. ["homepage", "blog", "guides"])
   indexSummary = false # true or false (default); whether to index only the `.Summary` instead of the full `.Content`; limits the respective JSON field size and thus increases loading time
 
   ## Search results
@@ -130,7 +131,7 @@ mainSections = ["docs"]
     type = "Organization" # Organization (default) or Person
     #logo = "favicon-512x512.png" # Logo of Organization — favicon-512x512.png (default)
     logo = "adama.jfif"
-    name = "Hyas" # Name of Organization or Person
+    name = "Adama SANGARE" # Name of Organization or Person
     sameAs = [] # E.g. ["https://github.com/gethyas/hyas", "https://fosstodon.org/@hyas"]
     #images = ["cover.png"] # ["cover.png"] (default)
     images = ["adama.jfif"]
