--- a/config/_default/module.toml
+++ b/config/_default/module.toml
@@ -25,6 +25,20 @@
   source = "node_modules/@tabler/icons/icons"
   target = "assets/svgs/tabler-icons"
 
+########## Début : Pour ajouter les mounts nécéssaires à la gestion des images
+
+## assets
+[[mounts]]
+  source = "node_modules/@thulite/images/assets"
+  target = "assets"
+
+## layouts
+[[mounts]]
+  source = "node_modules/@thulite/images/layouts"
+  target = "layouts"
+
+########## Fin : Pour ajouter les mounts nécéssaires à la gestion des images
+
 [[mounts]]
   source = "assets"
   target = "assets"
