--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hyas/inline-svg": "^1.1.0",
     "@hyas/seo": "^2.3.0",
     "@tabler/icons": "^3.2.0",
+    "@thulite/images": "^3.3.0",
     "gethyas": "^2.4.2"
   },
   "devDependencies": {
